--- a/src/App.scss
+++ b/src/App.scss
@@ -5,10 +5,12 @@ $yellow-star-wars: #f9d71c;
   background-size: cover;
   width: 100%;
   height: 100vh;
-  color: #f9d71c;
+  color: $yellow-star-wars;
+  font-family: 'Pathway Gothic One', sans-serif;
+
 
   article {
-    border: #f9d71c 2px solid;
+    border: $yellow-star-wars 2px solid;
 
     header {
       padding: 15px;
@@ -36,14 +38,24 @@ $yellow-star-wars: #f9d71c;
 }
 
 .buttonContainer {
-  margin-top: 15%;
+  margin-top: 1em;
 }
 
+.star-wars-layout {
+    font-size: 4em;
+    font-size: 300%;
+    font-weight: 600;
+    letter-spacing: 6px;
+    line-height: 150%;
+    text-align: justify;
+    width: 70%;
+    margin: 0;
+}
 
 
 .nextButton {
   background: transparent;
   padding: 15px;
-  border: #f9d71c 2px solid;
-  color: #f9d71c;
+  border: $yellow-star-wars 2px solid;
+  color: $yellow-star-wars;
 }
