--- a/src/App.scss
+++ b/src/App.scss
@@ -1,61 +1,99 @@
 $yellow-star-wars: #f9d71c;
+$padding: 15px;
+$yellow-border: $yellow-star-wars 2px solid;
+
+.general-props {
+  color: $yellow-star-wars;
+  font-weight: 600;
+  font-size: 20px;
+}
 
 .App {
+  font-family: 'Pathway Gothic One', sans-serif;
+  @extend .general-props;
   background: url("background.jpg") center no-repeat;
   background-size: cover;
   width: 100%;
   height: 100vh;
-  color: $yellow-star-wars;
-  font-family: 'Pathway Gothic One', sans-serif;
 
-
-  article {
-    border: $yellow-star-wars 2px solid;
+  .planet-box {
+    border: $yellow-border;
+    margin: 1em;
 
     header {
-      padding: 15px;
-      border-bottom: $yellow-star-wars 2px solid;
+      padding: $padding;
+      border-bottom: $yellow-border;
     }
 
     .planet-box-body {
-      padding: 15px;
+      padding: $padding;
 
+      .planet-attributes-list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+          padding: $padding;
+        }
+      }
     }
   }
-}
 
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &.mod-full {
-    height: 100%;
-  }
-}
-.col{
-  display: flex;
-  flex-direction: column;
-}
-
-.buttonContainer {
-  margin-top: 1em;
-}
-
-.star-wars-layout {
-    font-size: 4em;
-    font-size: 300%;
-    font-weight: 600;
+  .star-wars-layout {
+    font-size: 2.5em;
     letter-spacing: 6px;
     line-height: 150%;
     text-align: justify;
     width: 70%;
-    margin: 0;
-}
+    margin: 1em 0;
+  }
 
+  .row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.nextButton {
-  background: transparent;
-  padding: 15px;
-  border: $yellow-star-wars 2px solid;
-  color: $yellow-star-wars;
+    &.mod-full {
+      height: 100%;
+    }
+  }
+
+  .col {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nextButton {
+    background: transparent;
+    padding: $padding;
+    border: $yellow-border;
+    @extend .general-props;
+  }
+
+  .ladda-button[data-loading] {
+    .ladda-label {
+      cursor: default;
+      color: transparent;
+    }
+
+    .ladda-spinner {
+      display: block;
+
+    }
+  }
+
+  .ladda-spinner {
+    position: relative;
+    left: 50%;
+    top: -7px;
+    display: none;
+  }
+
+  @media (max-width: 768px) {
+    .star-wars-layout {
+      font-size: 1.2em;
+      text-align: center;
+    }
+  }
 }
